[package]
name = "rustRelayer"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "1.4.0", features = ["full"] }
lapin = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3"
